fixes again for picture upload and display